# dune-ftg

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake  dune-ftg.pc.in  dune.module
src/: CMakeLists.txt  boundary.geoelectrics  boundary.groundwater  boundary.moments_c0  boundary.transport  boundary_nosideflow.transport  boundary_sideflow.transport  conductivity.field  dune-ftg.cc  electrode.configuration  electrode.configuration2D  electrode.configuration3D  modelling.ini  moments.cc  porosity.field  print.cc  storativity.field  test.conductivity.field  test.storativity.stoch.h5  test.storativity.trend  transient.cc  well.configuration
src/HDF5_stuff/: .conductivity.stoch.h5  .conductivity.xdmf  .fieldList  .porosity.stoch.h5  .porosity.xdmf  .storativity.stoch.h5  .storativity.xdmf  ftg.conductivity.xdmf  ftg.porosity.field  ftg.porosity.stoch.h5  ftg.porosity.xdmf  ftg.storativity.trend  ftg.storativity.xdmf  howtogetfield  modify_fields.m  readmyfield.m  test.storativity.field
src/boundary/: ERT  groundwaterFlow  momentsTransport
src/fields/: ftg.conductivity.field  ftg.conductivity.stoch.h5  ftg.fieldList  ftg.storativity.field  ftg.storativity.stoch.h5  ftg_fields.conductivity.stoch.h5  intermediate.conductivity.field  intermediate.conductivity.stoch.h5  intermediate.sigma_bg.stoch.h5  production.conductivity.field  production.sigma_bg.field  smallvariance.conductivity.field  smallvariance.conductivity.stoch.h5  smallvariance.fieldList  smallvariance.porosity.stoch.h5  smallvariance.sigma_bg.field  smallvariance.sigma_bg.stoch.h5  testing_e.sigma_bg.field  (+9 more)
(+253 files in other folders)
